[package]
name = "gyroflow_adobe"
version = "2.1.1"
authors = ["Adrian <adrian.eddy@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
gyroflow-plugin-base = { path = "../common" }
after-effects = { version = "0.2", git = "https://github.com/virtualritz/after-effects.git", rev = "c70729a" }
premiere      = { version = "0.2", git = "https://github.com/virtualritz/after-effects.git", rev = "c70729a" }
#after-effects = { path = "../../after-effects/after-effects" }
#premiere = { path = "../../after-effects/premiere" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
pretty-hex = "0.4"
png = "0.17"
serde_json = "1"

win_dbg_logger = "0.1"
log-panics = { version = "2.1", features = ["with-backtrace"]}

[build-dependencies]
#pipl = { path = "../../after-effects/pipl" }
pipl = "0.1"

#[profile.release]
#debug = true

[profile.deploy]
inherits = "release"
codegen-units = 1
lto = true
strip = true
