[package]
name = "gyroflow-plugin-base"
version = "0.1.0"
edition = "2021"
authors = ["Adrian <adrian.eddy@gmail.com>"]
license = "GPL-3.0-or-later"
description = "Gyroflow plugin base"

[dependencies]
log = "0.4"
itertools = "0.12"
lru = "0.12"
gyroflow-core = { git = "https://github.com/gyroflow/gyroflow.git", default-features = false, rev = "3dd0583", features = ["bundle-lens-profiles", "use-opencl"] }
#gyroflow-core = { path = "../../gyroflow/src/core", default-features = false, features = ["bundle-lens-profiles", "use-opencl"] }
log-panics = "2.1"
serde = "1"
serde_json = "1"
rfd = { version = "0.13", default-features = false, features = ["xdg-portal", "async-std"] }
parking_lot = "0.12"
lazy_static = "1.4.0"
fastrand = "2.0.1"
simplelog = { git = "https://github.com/Drakulix/simplelog.rs.git", rev = "4ef071d" }
win_dbg_logger = "0.1"
oslog = "*"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies.metal]
version = "0.27.0"
