[package]
name = "gyroflow-plugin-base"
version = "0.1.0"
edition = "2021"
authors = ["Adrian <adrian.eddy@gmail.com>"]
license = "GPL-3.0-or-later"
description = "Gyroflow plugin base"

[dependencies]
log = "0.4"
itertools = "0.13"
lru = "0.12"
gyroflow-core = { git = "https://github.com/gyroflow/gyroflow.git", default-features = false, rev = "868320b", features = ["bundle-lens-profiles", "use-opencl", "cache-gyro-metadata"] }
#gyroflow-core = { path = "../../gyroflow/src/core", default-features = false, features = ["bundle-lens-profiles", "use-opencl", "cache-gyro-metadata"] }
log-panics = "2.1"
serde = "1"
serde_json = "1"
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "async-std"] }
parking_lot = "0.12"
lazy_static = "1.5.0"
fastrand = "2.1.1"
simplelog = "0.12.2"
win_dbg_logger = "0.1"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
metal = "0.29.0"
oslog = "0.2"
