[package]
name = "gyroflow-ofx"
version = "1.3.0"
authors = ["Ilya Epifanov <elijah.epifanov@gmail.com>", "Adrian <adrian.eddy@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2021"
description = "Gyroflow OpenFX plugin"

[lib]
crate-type = ["cdylib"]

[dependencies]
gyroflow-plugin-base = { path = "../common" }
ofx = "0.3"
log = "0.4"

[patch.crates-io]
ofx = { git = "https://github.com/AdrianEddy/ofx-rs.git", rev = "31e682b" }
ofx_sys = { git = "https://github.com/AdrianEddy/ofx-rs.git", rev = "31e682b" }
#ofx = { path = "../../ofx-rs/ofx" }
#ofx_sys = { path = "../../ofx-rs/ofx-sys" }

[profile.deploy]
inherits = "release"
codegen-units = 1
lto = true
strip = true
