[package]
name = "gyroflow-ofx"
version = "2.0.1"
authors = ["Adrian <adrian.eddy@gmail.com>", "Ilya Epifanov <elijah.epifanov@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2021"
description = "Gyroflow OpenFX plugin"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
gyroflow-plugin-base = { path = "../common" }
ofx = "0.3"
log = "0.4"

[build-dependencies]
winres = "0.1"

[patch.crates-io]
ofx = { git = "https://github.com/AdrianEddy/ofx-rs.git", rev = "08a900e" }
ofx_sys = { git = "https://github.com/AdrianEddy/ofx-rs.git", rev = "08a900e" }
#ofx = { path = "../../ofx-rs/ofx" }
#ofx_sys = { path = "../../ofx-rs/ofx-sys" }

[profile.deploy]
inherits = "release"
codegen-units = 1
lto = true
strip = true
